[gd_scene load_steps=6 format=3 uid="uid://cxsmw1888irg"]

[ext_resource type="Script" uid="uid://bfladwn4h1d0x" path="res://Mine/Scripts/Experiences/mutti_paint_canvas.gd" id="1_67w1x"]
[ext_resource type="PackedScene" uid="uid://c6yfse7gqkybk" path="res://Mine/Models/Mutti/Canvas/PaintCanvas.glb" id="1_nmuhq"]
[ext_resource type="Material" uid="uid://duptnybg3ali4" path="res://Mine/Models/Mutti/Canvas/M_CanvasMain.tres" id="2_67w1x"]
[ext_resource type="Material" uid="uid://dddw83wd6plhx" path="res://Mine/Models/Mutti/Canvas/M_BottomOfCanvas.tres" id="3_ec52m"]

[sub_resource type="BoxShape3D" id="BoxShape3D_mbd7c"]
size = Vector3(2, 0.1, 3)

[node name="MuttiPaintCanvas" type="RigidBody3D"]
collision_mask = 524288
freeze = true
contact_monitor = true
max_contacts_reported = 2
script = ExtResource("1_67w1x")
path_to_renderer = NodePath("CollisionShape3D/PaintCanvas/Cube")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_mbd7c")

[node name="PaintCanvas" parent="CollisionShape3D" instance=ExtResource("1_nmuhq")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.1, 0)

[node name="Cube" parent="CollisionShape3D/PaintCanvas" index="0"]
surface_material_override/0 = ExtResource("2_67w1x")
surface_material_override/1 = ExtResource("3_ec52m")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]

[editable path="CollisionShape3D/PaintCanvas"]
